<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="gesoft.demomockito.login.LoginActivityFragment">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        style="@style/Base.V7.Widget.AppCompat.EditText"
        android:hint="@string/act_login_hint_name"/>

    <EditText
        android:id="@+id/et_userpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        style="@style/Base.V7.Widget.AppCompat.EditText"
        android:hint="@string/act_login_hint_pwd"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="提交"/>


</LinearLayout>
